force-app/main/default/objects/Customer__c/fields/AnnualRevenue__c.field-meta.xml
<CustomField>
    <fullName>AnnualRevenue__c</fullName>
    <label>מחזור שנתי</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>