force-app/main/default/objects/Customer__c/fields/CompanyRegistrationNumber__c.field-meta.xml
<CustomField>
    <fullName>CompanyRegistrationNumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Company Registration Number</label>
    <length>35</length>
    <type>Text</type>
</CustomField>