force-app/main/default/objects/Customer__c/fields/CompanyStartedDate__c.field-meta.xml
<CustomField>
    <fullName>CompanyStartedDate__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Company Started Date</label>
    <type>Date</type>
</CustomField>