force-app/main/default/objects/Customer__c/fields/disable_WF__c.field-meta.xml
<CustomField>
    <fullName>disable_WF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>disable_WF</label>
    <type>Checkbox</type>
</CustomField>