force-app/main/default/objects/Customer__c/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>תחום עיסוק</label>
    <length>255</length>
    <type>Text</type>
</CustomField>