force-app/main/default/objects/Customer__c/fields/JoinedDate__c.field-meta.xml
<CustomField>
    <fullName>JoinedDate__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>הצטרף לבנק</label>
    <type>Date</type>
</CustomField>