force-app/main/default/objects/Customer__c/fields/NameFieldTriggerOverride__c.field-meta.xml
<CustomField>
    <fullName>NameFieldTriggerOverride__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Name Field Trigger Override</label>
    <type>Checkbox</type>
</CustomField>