force-app/main/default/objects/Customer__c/fields/NumberOfEmployees__c.field-meta.xml
<CustomField>
    <fullName>NumberOfEmployees__c</fullName>
    <label>מספר עובדים</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>