force-app/main/default/objects/Customer__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>טלפון</label>
    <type>Phone</type>
</CustomField>