force-app/main/default/objects/Customer__c/fields/QAFullNamePlainText__c.field-meta.xml
<CustomField>
    <fullName>QAFullNamePlainText__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>QAFullNamePlainText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>