force-app/main/default/objects/Customer__c/fields/QARestrictedPicklist__c.field-meta.xml
<CustomField>
    <fullName>QARestrictedPicklist__c</fullName>
    <label>שדה מוגבל</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>ערך ראשון</fullName>
                <default>true</default>
                <label>ערך ראשון</label>
            </value>
            <value>
                <fullName>ערך שלישי</fullName>
            </value>
            <value>
                <fullName>ערך שני</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>